# Approximation_project

./: CMakeLists.txt  Genome.cpp  Genome.hpp  README.md  approximation.cpp  dataconst.cpp  dataconst.hpp  evo.cpp  evo.hpp  graph.cpp  main.cpp  numbers.txt  tochki.txt  tochki_2.txt
graph.dSYM/Contents/Resources/DWARF/: graph
graph.dSYM/Contents/Resources/Relocations/aarch64/: graph.yml
